# BLOG2GHP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sync_blog.py
.github/workflows/: sync-blog.yml
blog_sync/: __init__.py  client.py  config.py  downloader.py  feed_sync.py  posts.py  transform.py
